cmake_minimum_required(VERSION 2.6)
project(gtk-hello C)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
add_executable(gtk3-hello hello.c)
target_include_directories(gtk3-hello PRIVATE ${GTK3_INCLUDE_DIRS})
target_link_libraries(gtk3-hello ${GTK3_LIBRARIES})
install(TARGETS gtk3-hello RUNTIME DESTINATION bin)
