[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # patchelf silently fails to patch .so's in black 26.5.0 (NixOS/patchelf#583)
    "black==26.3.1",
]

[build-system]
requires = ["setuptools>61"]
build-backend = "setuptools.build_meta"

[project.scripts]
hello = "hello:main"
