[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==24.8.0",
]

[build-system]
requires = ["setuptools>61"]
build-backend = "setuptools.build_meta"

[project.scripts]
hello = "hello:main"
