<?xml version="1.0"?>
<package>
  <name>timezone_test</name>
  <version>0.0.0</version>
  <description>The timezone_test package</description>
  <maintainer email="me@example.com">me</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-tzlocal-pip</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-tzlocal-pip</run_depend>
</package>
